--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1460,3 +1460,36 @@ body {
     justify-content: center;
   }
 }
+.cid-rbjKGPffFl {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #2e2e2e;
+}
+.cid-rbjKGPffFl .title {
+  margin-bottom: 2rem;
+}
+.cid-rbjKGPffFl .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-rbjKGPffFl a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-rbjKGPffFl a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-rbjKGPffFl .multi-horizontal {
+  flex-grow: 1;
+  -webkit-flex-grow: 1;
+  max-width: 100%;
+}
+.cid-rbjKGPffFl .input-group-btn {
+  display: block;
+  text-align: center;
+}
+.cid-rbjKGPffFl LABEL {
+  color: #ffffff;
+}
+.cid-rbjKGPffFl H2 {
+  color: #ffffff;
+}
