--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1381,6 +1381,14 @@ body {
     flex: auto!important;
   }
 }
+.cid-rbjSuSwgSA {
+  padding-top: 135px;
+  padding-bottom: 135px;
+  background-image: url("../../../assets/images/47385890-2248105341886872-3531063231617433600-o-2000x1333.jpg");
+}
+.cid-rbjSuSwgSA H1 {
+  text-align: left;
+}
 .cid-rbjKGPffFl {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1414,6 +1422,84 @@ body {
 .cid-rbjKGPffFl H2 {
   color: #ffffff;
 }
+.cid-rbjW47aXRp {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-rbjW47aXRp .row-links {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rbjW47aXRp .social-row {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rbjW47aXRp .media-container-row {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rbjW47aXRp .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-rbjW47aXRp .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-rbjW47aXRp .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-rbjW47aXRp .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-rbjW47aXRp .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-rbjW47aXRp .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rbjW47aXRp .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rbjW47aXRp .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rbjW47aXRp .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-rbjW47aXRp .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-rbjW47aXRp .media-container-row .row-copirayt p {
+  width: 100%;
+}
 .cid-qTkA127IK8 {
   background-image: url("../../../assets/images/47385890-2248105341886872-3531063231617433600-o-2000x1333.jpg");
 }
@@ -1425,43 +1511,46 @@ body {
 .cid-qTkA127IK8 .mbr-section-btn {
   color: #ffffff;
 }
-.cid-rbjIDHIE5N {
-  padding-top: 60px;
-  padding-bottom: 60px;
+.cid-rbjWcqztRK {
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #2e2e2e;
 }
-@media (max-width: 767px) {
-  .cid-rbjIDHIE5N .content {
-    text-align: center;
-  }
-  .cid-rbjIDHIE5N .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
+.cid-rbjWcqztRK .row-links {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
 }
-@media (max-width: 767px) {
-  .cid-rbjIDHIE5N .media-wrap {
-    margin-bottom: 1rem;
-  }
+.cid-rbjWcqztRK .social-row {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
 }
-.cid-rbjIDHIE5N .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
+.cid-rbjWcqztRK .media-container-row {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
 }
-.cid-rbjIDHIE5N .media-wrap img {
-  height: 6rem;
+.cid-rbjWcqztRK .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
 }
-@media (max-width: 767px) {
-  .cid-rbjIDHIE5N .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
+.cid-rbjWcqztRK .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
 }
-.cid-rbjIDHIE5N .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
+.cid-rbjWcqztRK .media-container-row .foot-menu li p {
+  margin: 0;
 }
-.cid-rbjIDHIE5N .footer-lower .social-list {
+.cid-rbjWcqztRK .media-container-row .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -1471,73 +1560,91 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rbjIDHIE5N .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
+.cid-rbjWcqztRK .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
 }
-.cid-rbjIDHIE5N .footer-lower .social-list .soc-item {
+.cid-rbjWcqztRK .media-container-row .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rbjIDHIE5N .footer-lower .social-list a {
+.cid-rbjWcqztRK .media-container-row .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rbjIDHIE5N .footer-lower .social-list a:hover {
+.cid-rbjWcqztRK .media-container-row .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rbjIDHIE5N .footer-lower .social-list {
+  .cid-rbjWcqztRK .media-container-row .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-rbjNdn6HXF {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.cid-rbjWcqztRK .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-rbjWcqztRK .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-rbjVSXLsqJ {
+  padding-top: 135px;
+  padding-bottom: 135px;
   background-image: url("../../../assets/images/47385890-2248105341886872-3531063231617433600-o-2000x1333.jpg");
 }
-.cid-rbjNdn6HXF H1 {
+.cid-rbjVSXLsqJ H1 {
   text-align: left;
 }
-.cid-rbjOq6hShf {
-  padding-top: 60px;
-  padding-bottom: 60px;
+.cid-rbjRq13iBe {
+  padding-top: 135px;
+  padding-bottom: 135px;
   background-color: #2e2e2e;
 }
-@media (max-width: 767px) {
-  .cid-rbjOq6hShf .content {
-    text-align: center;
-  }
-  .cid-rbjOq6hShf .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
+.cid-rbjRq13iBe H1 {
+  text-align: left;
 }
-@media (max-width: 767px) {
-  .cid-rbjOq6hShf .media-wrap {
-    margin-bottom: 1rem;
-  }
+.cid-rbjVVtP7sL {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
 }
-.cid-rbjOq6hShf .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
+.cid-rbjVVtP7sL .row-links {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
 }
-.cid-rbjOq6hShf .media-wrap img {
-  height: 6rem;
+.cid-rbjVVtP7sL .social-row {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
 }
-@media (max-width: 767px) {
-  .cid-rbjOq6hShf .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
+.cid-rbjVVtP7sL .media-container-row {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
 }
-.cid-rbjOq6hShf .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
+.cid-rbjVVtP7sL .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
 }
-.cid-rbjOq6hShf .footer-lower .social-list {
+.cid-rbjVVtP7sL .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-rbjVVtP7sL .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-rbjVVtP7sL .media-container-row .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -1547,25 +1654,32 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rbjOq6hShf .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
+.cid-rbjVVtP7sL .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
 }
-.cid-rbjOq6hShf .footer-lower .social-list .soc-item {
+.cid-rbjVVtP7sL .media-container-row .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rbjOq6hShf .footer-lower .social-list a {
+.cid-rbjVVtP7sL .media-container-row .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rbjOq6hShf .footer-lower .social-list a:hover {
+.cid-rbjVVtP7sL .media-container-row .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rbjOq6hShf .footer-lower .social-list {
+  .cid-rbjVVtP7sL .media-container-row .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
+}
+.cid-rbjVVtP7sL .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-rbjVVtP7sL .media-container-row .row-copirayt p {
+  width: 100%;
 }
