Update yet again

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1500,16 +1500,11 @@ body {
 .cid-rbjW47aXRp .media-container-row .row-copirayt p {
   width: 100%;
 }
-.cid-qTkA127IK8 {
+.cid-rbk1R4wGls {
   background-image: url("../../../assets/images/47385890-2248105341886872-3531063231617433600-o-2000x1333.jpg");
 }
-.cid-qTkA127IK8 H1 {
+.cid-rbk1R4wGls H1 {
   text-align: left;
-  color: #ffffff;
-}
-.cid-qTkA127IK8 .mbr-text,
-.cid-qTkA127IK8 .mbr-section-btn {
-  color: #ffffff;
 }
 .cid-rbjWcqztRK {
   padding-top: 30px;
@@ -1596,6 +1591,9 @@ body {
 }
 .cid-rbjVSXLsqJ H1 {
   text-align: left;
+}
+.cid-rbjVSXLsqJ H3 {
+  text-align: center;
 }
 .cid-rbjRq13iBe {
   padding-top: 135px;
