--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1387,7 +1387,7 @@ body {
   background-image: url("../../../assets/images/47385890-2248105341886872-3531063231617433600-o-2000x1333.jpg");
 }
 .cid-rbjSuSwgSA H1 {
-  text-align: left;
+  text-align: center;
 }
 .cid-rbjKGPffFl {
   padding-top: 90px;
@@ -1504,7 +1504,7 @@ body {
   background-image: url("../../../assets/images/47385890-2248105341886872-3531063231617433600-o-2000x1333.jpg");
 }
 .cid-rbk1R4wGls H1 {
-  text-align: left;
+  text-align: center;
 }
 .cid-rbjWcqztRK {
   padding-top: 30px;
@@ -1590,7 +1590,7 @@ body {
   background-image: url("../../../assets/images/47385890-2248105341886872-3531063231617433600-o-2000x1333.jpg");
 }
 .cid-rbjVSXLsqJ H1 {
-  text-align: left;
+  text-align: center;
 }
 .cid-rbjVSXLsqJ H3 {
   text-align: center;
