Update title page

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1501,11 +1501,8 @@ body {
 .cid-rbjW47aXRp .media-container-row .row-copirayt p {
   width: 100%;
 }
-.cid-rbk1R4wGls {
+.cid-rbk4nfrwJg {
   background-image: url("../../../assets/images/47385890-2248105341886872-3531063231617433600-o-2000x1333.jpg");
-}
-.cid-rbk1R4wGls H1 {
-  text-align: center;
 }
 .cid-rbjWcqztRK {
   padding-top: 30px;
