--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2301,6 +2301,9 @@ body {
 .cid-refFXPj1ji .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
+.cid-rbk4nfrwJg {
+  background-image: url("../../../assets/images/47385890-2248105341886872-3531063231617433600-o-2000x1333.jpg");
+}
 .cid-rbjWcqztRK {
   padding-top: 30px;
   padding-bottom: 30px;
