--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2320,7 +2320,7 @@ body {
   padding-bottom: 1.5rem;
 }
 .cid-rkwYly7TUD H1 {
-  text-align: right;
+  text-align: center;
 }
 .cid-rkwYly7TUD .mbr-text,
 .cid-rkwYly7TUD .mbr-section-btn {
@@ -2328,7 +2328,7 @@ body {
 }
 .cid-rkwYly7TUD .mbr-text,
 .cid-rkwYly7TUD .mbr-section-btn P {
-  text-align: right;
+  text-align: center;
 }
 .cid-rbjWcqztRK {
   padding-top: 30px;
