--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2330,6 +2330,9 @@ body {
 .cid-rkwYly7TUD .mbr-section-btn P {
   text-align: center;
 }
+.cid-rkwYly7TUD P {
+  color: #ffffff;
+}
 .cid-rbjWcqztRK {
   padding-top: 30px;
   padding-bottom: 30px;
